added language-switch button. Beautify Industry Page. Only Favorite Page have not implemented lauguage-switch function.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,11 +15,15 @@
     "residential": "Residential",
     "services": "Services",
     "energy": "Energy",
-    "manufacturing": "Manufacturing",
-    "transportation": "Transportation",
+    "manufacturing": "Manufact.",
+    "transportation": "Transport.",
     "electricity": "Electricity",
     "select_city": "Select city",
     "select_year": "Select Year",
+    "year": "Year:",
+    "month": "Month(2023):",
+    "carbon": "10ktonCO₂e",
+    "map_view": "Map View",
     "entire_country": "Entire Country",
     "nantou_county": "Nantou County",
     "taizhong_city": "Taizhong City",
