--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -18,8 +18,12 @@
     "manufacturing": "製造業",
     "transportation": "交通運輸",
     "electricity": "電力部門",
-    "select_city": "選擇城市",
+    "select_city": "選擇縣市",
     "select_year": "選擇年份",
+    "year": "年份:",
+    "month": "2023月份:",
+    "carbon": "碳強度 (10ktonCO₂e)",
+    "map_view": "台灣碳排放熱點圖",
     "entire_country": "全國",
     "nantou_county": "南投縣",
     "taizhong_city": "台中市",
