fix(localization): update translation file
Updated the translation file to fix issues and improve localization support. This change ensures that the translated strings are accurate and align with the app's requirements.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,15 +13,15 @@
     "map_view": "Map View",
     "about": "About",
     "residential": "Residential",
-    "services": "Services",
-    "energy": "Energy",
-    "manufacturing": "Manufact.",
-    "transportation": "Transport.",
+    "services": "Services   ",
+    "energy": "Energy     ",
+    "manufacturing": "Manufact.  ",
+    "transportation": "Transport. ",
     "electricity": "Electricity",
     "select_city": "Select city",
     "select_year": "Select Year",
     "year": "Year:",
-    "month": "Month(2023):",
+    "month": "Month:",
     "carbon": "10ktonCO₂e",
     "map_view": "Map View",
     "entire_country": "Entire Country",
