Fix taitung_city display and translate problem; change info icon to settings icon.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,7 +30,7 @@
     "taizhong_city": "Taizhong City",
     "taipei_city": "Taipei City",
     "tainan_city": "Tainan City",
-    "taitung_city": "Taitung City",
+    "taitung_country": "Taitung Country",
     "chiayi_city": "Chiayi City",
     "chiayi_county": "Chiayi County",
     "keelung_city": "Keelung City",
