--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -30,7 +30,7 @@
     "taizhong_city": "台中市",
     "taipei_city": "台北市",
     "tainan_city": "台南市",
-    "taitung_city": "台東市",
+    "taitung_country": "台東縣",
     "chiayi_city": "嘉義市",
     "chiayi_county": "嘉義縣",
     "keelung_city": "基隆市",
