--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,6 +25,8 @@
     "month": "Month:",
     "carbon": "10ktonCO₂e",
     "map_view": "Map View",
+    "pie_chart": "Pie Chart",
+    "bar_chart": "Bar Chart",
     "entire_country": "Entire Country",
     "nantou_county": "Nantou County",
     "taizhong_city": "Taizhong City",
