--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -32,7 +32,7 @@
     "taizhong_city": "Taizhong City",
     "taipei_city": "Taipei City",
     "tainan_city": "Tainan City",
-    "taitung_country": "Taitung Country",
+    "taitung_county": "Taitung County",
     "chiayi_city": "Chiayi City",
     "chiayi_county": "Chiayi County",
     "keelung_city": "Keelung City",
