--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,10 +14,10 @@
     "department_chart": "Department Pie Chart",
     "about": "About",
     "residential": "Residential",
-    "services": "Services   ",
-    "energy": "Energy     ",
-    "manufacturing": "Manufact.  ",
-    "transportation": "Transport. ",
+    "services": "Services",
+    "energy": "Energy",
+    "manufacturing": "Manufacturing",
+    "transportation": "Transportation",
     "electricity": "Electricity",
     "select_city": "Select city",
     "select_year": "Select Year",
@@ -49,5 +49,18 @@
     "lienchiang_county": "Lienchiang County",
     "kinmen_county": "Kinmen County",
     "yunlin_county": "Yunlin County",
-    "kaohsiung_city": "Kaohsiung City"
+    "kaohsiung_city": "Kaohsiung City",
+    "favorites_title": "My Favorites",
+    "no_favorites_message": "No favorites added yet. Tap the button below to add.",
+    "city_label": "City",
+    "industry_label": "Industry",
+    "action_prompt": "Choose an Action",
+    "choose_action_message": "Select the action you want to perform",
+    "navigate_action": "Navigate",
+    "delete_action": "Delete",
+    "add_favorite_tooltip": "Add to Favorites",
+    "least_choose":"Please choose county and at least one industry",
+    "error":"error",
+    "add_favorite":"Add your favorite",
+    "choose_industry":"Choose industry"
 }
