--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -14,9 +14,9 @@
     "department_chart": "Department Pie Chart",
     "about": "關於",
     "residential": "住宅部門",
-    "services": "服務業　",
+    "services": "服務業",
     "energy": "能源部門",
-    "manufacturing": "製造業　",
+    "manufacturing": "製造業",
     "transportation": "交通運輸",
     "electricity": "電力部門",
     "select_city": "選擇縣市",
@@ -49,5 +49,18 @@
     "lienchiang_county": "連江縣",
     "kinmen_county": "金門縣",
     "yunlin_county": "雲林縣",
-    "kaohsiung_city": "高雄市"
+    "kaohsiung_city": "高雄市",
+    "favorites_title": "我的最愛",
+    "no_favorites_message": "尚未建立我的最愛，按下下方按鈕新增。",
+    "city_label": "縣市",
+    "industry_label": "產業",
+    "action_prompt": "選擇操作",
+    "choose_action_message": "請選擇要執行的操作",
+    "navigate_action": "跳轉",
+    "delete_action": "刪除",
+    "add_favorite_tooltip": "新增到我的最愛",
+    "least_choose":"請選擇縣市與至少一個產業",
+    "error":"錯誤",
+    "add_favorite":"新增我的最愛",
+    "choose_industry":"選擇產業"
 }
