--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -55,8 +55,8 @@
     "city_label": "City",
     "industry_label": "Industry",
     "action_prompt": "Choose an Action",
-    "choose_action_message": "Select the action you want to perform",
-    "navigate_action": "Navigate",
+    "choose_action_message": "What do you want to do?",
+    "navigate_action": "Move to chart",
     "delete_action": "Delete",
     "add_favorite_tooltip": "Add to Favorites",
     "least_choose":"Please choose county and at least one industry",
